--- a/charts/prom-label-proxy/templates/rbac-configmap.yaml
+++ b/charts/prom-label-proxy/templates/rbac-configmap.yaml
@@ -10,5 +10,6 @@ metadata:
     {{ toYaml .Values.annotations | nindent 4 }}
   {{- end }}
 data:
-  config-file.yaml: |{{ .Values.kubeRBACProxy.config | toYaml | nindent 4 }}
+  config-file.yaml: |
+    {{- .Values.kubeRBACProxy.config | toYaml | nindent 4 }}
 {{- end }}
