Add code improvement
Signed-off-by: Luigi Bitonti <bitonti.luigi@gmail.com>

--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -65,6 +65,7 @@ configmapReload:
       digest: ""
       pullPolicy: IfNotPresent
 
+    ## config-reloader's container port and port name for probes and metrics
     containerPort: 8080
     containerPortName: metrics 
 
@@ -93,7 +94,7 @@ configmapReload:
     ## Security context to be added to configmap-reload container
     containerSecurityContext: {}
 
-    ## Prometheus reloader readiness and liveness probe initial delay and timeout
+    ## Settings for Prometheus reloader's readiness, liveness and startup probes
     ## Ref: https://kubernetes.io/docs/tasks/configure-pod-container/configure-liveness-readiness-startup-probes/
     ##
 
