Enabled startup probe in ci pipeline
Signed-off-by: Luigi Bitonti <bitonti.luigi@gmail.com>

--- a/charts/prometheus/ci/02-config-reloader-deployment-values.yaml
+++ b/charts/prometheus/ci/02-config-reloader-deployment-values.yaml
@@ -20,6 +20,9 @@ configmapReload:
       log-level: debug
       watch-interval: 1m
 
+    startupProbe:
+      enabled: true
+
 server:
   statefulSet:
     enabled: false
