--- a/charts/prometheus-systemd-exporter/values.yaml
+++ b/charts/prometheus-systemd-exporter/values.yaml
@@ -62,6 +62,26 @@ prometheus:
     metricRelabelings: []
     interval: ""
     scrapeTimeout: 10s
+  rules:
+    enabled: false
+    additionalLabels: {}
+    namespace: ""
+    rules:
+      ## These are just examples rules, please adapt them to your needs.
+      ## Make sure to constraint the rules to the current service.
+      - alert: SystemdServiceFailed
+        expr: |
+          systemd_unit_state{state="failed", service="{{ template "prometheus-systemd-exporter.fullname" . }}"} == 1
+        for: 5m
+        labels:
+          severity: warning
+        annotations:
+          description: |
+            Systemd service {{ "{{ $labels.name }}" }} has entered failed state at {{ "{{ $labels.instance }}" }}
+          # We can re-use node_exporter systemd runbooks
+          runbook_url: |
+            https://runbooks.prometheus-operator.dev/runbooks/node/nodesystemdservicefailed
+          summary: Systemd service has entered failed state.
 
 ## Customize the updateStrategy if set
 updateStrategy:
