Add support for DATA_SOURCE_USER_FILE
Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>

--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -130,6 +130,9 @@ config:
     # Specify one of both datasource or datasourceSecret
     host: ''
     user: postgres
+    # Specify usernameFile if DB username is stored in a file.
+    # For example, to use with vault-injector from Hashicorp
+    usernameFile: ''
     userSecret: {}
     # Secret name
     #  name:
