--- a/charts/kube-prometheus-stack/templates/prometheus/clusterrole.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/clusterrole.yaml
@@ -31,6 +31,12 @@ rules:
   - services/{{ include "prometheus-node-exporter.fullname" (index .Subcharts "prometheus-node-exporter") }}
   verbs: [ "get", "list", "watch" ]
 {{- end }}
+{{- if and .Values.kubeStateMetrics.enabled (index .Values "kube-state-metrics").kubeRBACProxy.enabled }}
+- apiGroups: [ "" ]
+  resources:
+  - services/{{ include "kube-state-metrics.fullname" (index .Subcharts "kube-state-metrics") }}
+  verbs: [ "get", "list", "watch" ]
+{{- end }}
 {{- if .Values.prometheus.additionalRulesForClusterRole }}
 {{ toYaml .Values.prometheus.additionalRulesForClusterRole | indent 0 }}
 {{- end }}
