--- a/charts/prometheus-postgres-exporter/templates/deployment.yaml
+++ b/charts/prometheus-postgres-exporter/templates/deployment.yaml
@@ -91,9 +91,9 @@ spec:
                 name: {{ tpl .Values.config.datasource.userSecret.name . }}
                 key: {{ tpl .Values.config.datasource.userSecret.key . }}
           {{- else }}
-          {{- if .Values.config.datasource.usernameFile }}
+          {{- if .Values.config.datasource.userFile }}
           - name: DATA_SOURCE_USER_FILE
-            value: {{ tpl .Values.config.datasource.usernameFile . }}
+            value: {{ tpl .Values.config.datasource.userFile . }}
           {{- else }}
           - name: DATA_SOURCE_USER
             value: {{ tpl .Values.config.datasource.user . }}
