--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -130,9 +130,9 @@ config:
     # Specify one of both datasource or datasourceSecret
     host: ''
     user: postgres
-    # Specify usernameFile if DB username is stored in a file.
+    # Specify userFile if DB username is stored in a file.
     # For example, to use with vault-injector from Hashicorp
-    usernameFile: ''
+    userFile: ''
     userSecret: {}
     # Secret name
     #  name:
