VPA capability for AlertManager
Signed-off-by: rakesh-von <rakesh.akula@vonage.com>

--- a/charts/alertmanager/values.yaml
+++ b/charts/alertmanager/values.yaml
@@ -378,7 +378,7 @@ testFramework:
     "helm.sh/hook": test-success
     # "helm.sh/hook-delete-policy": "before-hook-creation,hook-succeeded"
 
-# -- Vertical Pod Autoscaler
+# --- Vertical Pod Autoscaler
 verticalPodAutoscaler:
   # -- Use VPA for alertmanager
   enabled: false
