--- a/charts/alertmanager/templates/vpa.yaml
+++ b/charts/alertmanager/templates/vpa.yaml
@@ -17,10 +17,10 @@ spec:
     name: {{ include "alertmanager.fullname" . }}
   {{- if .Values.verticalPodAutoscaler.updatePolicy }}
   updatePolicy:
-    {{ toYaml .Values.verticalPodAutoscaler.updatePolicy | nindent 4 }}
+    {{- toYaml .Values.verticalPodAutoscaler.updatePolicy | nindent 4 }}
   {{- end }}
   {{- if .Values.verticalPodAutoscaler.resourcePolicy }}
   resourcePolicy:
-    {{ toYaml .Values.verticalPodAutoscaler.resourcePolicy | nindent 4 }}
+    {{- toYaml .Values.verticalPodAutoscaler.resourcePolicy | nindent 4 }}
   {{- end }}
 {{- end }}
