[prometheus-postgres-exporter] Add support for DATA_SOURCE_USER_FILE (#4720)
* Add support for DATA_SOURCE_USER_FILE

Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>

* Update charts/prometheus-postgres-exporter/templates/deployment.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>

* Update charts/prometheus-postgres-exporter/values.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>

* Bump the chart version

Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>

* Update charts/prometheus-postgres-exporter/Chart.yaml

Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>

---------

Signed-off-by: Uros Bajzelj <ubajze@users.noreply.github.com>
Co-authored-by: zeritti <47476160+zeritti@users.noreply.github.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -130,6 +130,9 @@ config:
     # Specify one of both datasource or datasourceSecret
     host: ''
     user: postgres
+    # Specify userFile if DB username is stored in a file.
+    # For example, to use with vault-injector from Hashicorp
+    userFile: ''
     userSecret: {}
     # Secret name
     #  name:
