--- a/charts/prometheus-postgres-exporter/templates/deployment.yaml
+++ b/charts/prometheus-postgres-exporter/templates/deployment.yaml
@@ -91,8 +91,13 @@ spec:
                 name: {{ tpl .Values.config.datasource.userSecret.name . }}
                 key: {{ tpl .Values.config.datasource.userSecret.key . }}
           {{- else }}
+          {{- if .Values.config.datasource.userFile }}
+          - name: DATA_SOURCE_USER_FILE
+            value: {{ tpl .Values.config.datasource.userFile . }}
+          {{- else }}
           - name: DATA_SOURCE_USER
             value: {{ tpl .Values.config.datasource.user . }}
+          {{- end }}
           {{- end }}
           {{- if .Values.config.datasource.pgpassfile }}
           - name: PGPASSFILE
