Fixing problem when trying to add container security context

--- a/charts/prometheus-memcached-exporter/templates/deployment.yaml
+++ b/charts/prometheus-memcached-exporter/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
           {{- end }}
           {{- with .Values.securityContext }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+            {{- toYaml . | nindent 12 }}
           {{- end }}
           ports:
             - name: http-alt
