--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -158,7 +158,7 @@ spec:
             - name: {{ $header.name }}
               value: {{ $header.value }}
             {{- end }}
-            path: /healthz
+            path: /livez
             port: {{ $servicePort }}
             scheme: {{ upper .Values.livenessProbe.httpGet.scheme }}
           initialDelaySeconds: {{ .Values.livenessProbe.initialDelaySeconds }}
@@ -176,7 +176,7 @@ spec:
             - name: {{ $header.name }}
               value: {{ $header.value }}
             {{- end }}
-            path: /
+            path: /readyz
             port: {{ $servicePort }}
             scheme: {{ upper .Values.readinessProbe.httpGet.scheme }}
           initialDelaySeconds: {{ .Values.readinessProbe.initialDelaySeconds }}
