Introduce extraManifests value/option
Signed-off-by: Rimantas Ragainis <rimantas.ragainis@gmail.com>

--- a/charts/prometheus-elasticsearch-exporter/values.yaml
+++ b/charts/prometheus-elasticsearch-exporter/values.yaml
@@ -124,6 +124,17 @@ env: {}
 #   - --es.indices_mappings
 extraArgs: []
 
+# Extra manifests to deploy as an array
+extraManifests: []
+  # - |
+  #   apiVersion: v1
+  #   kind: ConfigMap
+  #   metadata:
+  #   labels:
+  #     name: prometheus-elasticsearch-exporter-extra
+  #   data:
+  #     extra-data: "value"
+
 ## The name of a secret in the same kubernetes namespace which contain values to be added to the environment
 ## This can be useful for auth tokens, etc
 envFromSecret: ""
