Align probing endpoints with recommendations
Signed-off-by: Simon Kienzler <simon.kienzler@inovex.de>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -159,7 +159,7 @@ spec:
             - name: {{ $header.name }}
               value: {{ $header.value }}
             {{- end }}
-            path: /livez
+            path: /healthz
             port: {{ $servicePort }}
             scheme: {{ upper .Values.startupProbe.httpGet.scheme }}
           initialDelaySeconds: {{ .Values.startupProbe.initialDelaySeconds }}
