allow setting annotations for admission webhooks
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2238,6 +2238,13 @@ prometheusOperator:
     namespaceSelector: {}
     objectSelector: {}
 
+    mutatingWebhookConfiguration:
+      annotations: {}
+      #   argocd.argoproj.io/hook: PreSync
+
+    validatingWebhookConfiguration:
+      annotations:
+      #   argocd.argoproj.io/hook: PreSync
 
     deployment:
       enabled: false
