add test for webhook annotations
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/kube-prometheus-stack/ci/04-prometheus-operator-webhook-values.yaml
+++ b/charts/kube-prometheus-stack/ci/04-prometheus-operator-webhook-values.yaml
@@ -1,4 +1,7 @@
 prometheusOperator:
   admissionWebhooks:
+    validatingWebhookConfiguration:
+      annotations:
+        test: test1
     deployment:
       enabled: true
