--- a/charts/kube-prometheus-stack/ci/04-prometheus-operator-webhook-values.yaml
+++ b/charts/kube-prometheus-stack/ci/04-prometheus-operator-webhook-values.yaml
@@ -3,5 +3,6 @@ prometheusOperator:
     validatingWebhookConfiguration:
       annotations:
         test: test1
+        test2: test3
     deployment:
       enabled: true
