add test for webhook annotations
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
@@ -6,7 +6,7 @@ metadata:
   annotations:
     {{- include "kube-prometheus-stack.prometheus-operator-webhook.annotations" $ | trim |nindent 4 }}
     {{- with .Values.prometheusOperator.admissionWebhooks.mutatingWebhookConfiguration.annotations }}
-    {{ toYaml . }}
+    {{ toYaml . | trim | nindent 4}}
     {{- end }}
   labels:
     app: {{ template "kube-prometheus-stack.name" $ }}-admission
