--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/validatingWebhookConfiguration.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/validatingWebhookConfiguration.yaml
@@ -4,9 +4,9 @@ kind: ValidatingWebhookConfiguration
 metadata:
   name:  {{ template "kube-prometheus-stack.fullname" . }}-admission
   annotations:
-    {{- include "kube-prometheus-stack.prometheus-operator-webhook.annotations" $ | trim |nindent 4 }}
+    {{- include "kube-prometheus-stack.prometheus-operator-webhook.annotations" $ | trim | nindent 4 }}
     {{- with .Values.prometheusOperator.admissionWebhooks.validatingWebhookConfiguration.annotations }}
-    {{ toYaml . }}
+    {{ toYaml . | trim | nindent 4}}
     {{- end }}
   labels:
     app: {{ template "kube-prometheus-stack.name" $ }}-admission
