Apply suggestions from code review
Co-authored-by: Jan-Otto Kröpke <github@jkroepke.de>
Signed-off-by: Ilia Lazebnik <Ilia.lazebnik@gmail.com>

--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/mutatingWebhookConfiguration.yaml
@@ -6,11 +6,11 @@ metadata:
   annotations:
     {{- include "kube-prometheus-stack.prometheus-operator-webhook.annotations" $ | trim |nindent 4 }}
     {{- with .Values.prometheusOperator.admissionWebhooks.mutatingWebhookConfiguration.annotations }}
-    {{ toYaml . | trim | nindent 4}}
+    {{- toYaml . | nindent 4}}
     {{- end }}
   labels:
     app: {{ template "kube-prometheus-stack.name" $ }}-admission
-    {{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" $ | trim | nindent 4 }}
+    {{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" $ | nindent 4 }}
 webhooks:
   - name: prometheusrulemutate.monitoring.coreos.com
     {{- if eq .Values.prometheusOperator.admissionWebhooks.failurePolicy "IgnoreOnInstallOnly" }}
