--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2243,7 +2243,7 @@ prometheusOperator:
       #   argocd.argoproj.io/hook: PreSync
 
     validatingWebhookConfiguration:
-      annotations:
+      annotations: {}
       #   argocd.argoproj.io/hook: PreSync
 
     deployment:
