add pod labels for ksm
Signed-off-by: drfaust92 <ilia.lazebnik@gmail.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -31,9 +31,12 @@ spec:
     metadata:
       labels:
         {{- include "kube-state-metrics.labels" . | indent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       {{- if .Values.podAnnotations }}
       annotations:
-{{ toYaml .Values.podAnnotations | indent 8 }}
+      {{ toYaml .Values.podAnnotations | indent 8 }}
       {{- end }}
     spec:
       automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
