--- a/charts/kube-state-metrics/values.yaml
+++ b/charts/kube-state-metrics/values.yaml
@@ -314,6 +314,9 @@ annotations: {}
 # Annotations to be added to the pod
 podAnnotations: {}
 
+# Labels to be added to the pod
+podLabels: {}
+
 ## Assign a PriorityClassName to pods if set
 # priorityClassName: ""
 
