--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/general.rules.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/general.rules.yaml
@@ -74,7 +74,7 @@ spec:
           '
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/general/watchdog
         summary: An alert that should always be firing to certify that Alertmanager is working properly.
-      expr: vector(1)
+      expr: present_over_time(prometheus_tsdb_head_max_time[1m]) != 0
       labels:
         severity: {{ dig "Watchdog" "severity" "none" .Values.customRules }}
       {{- if or .Values.defaultRules.additionalRuleLabels .Values.defaultRules.additionalRuleGroupLabels.general }}
