chore(prometheus-blackbox-exporter): set kube version as >= 1.21
Signed-off-by: Damien Plénard <damien@plenard.me>

--- a/charts/prometheus-blackbox-exporter/Chart.yaml
+++ b/charts/prometheus-blackbox-exporter/Chart.yaml
@@ -3,6 +3,7 @@ description: Prometheus Blackbox Exporter
 name: prometheus-blackbox-exporter
 version: 9.0.0
 appVersion: v0.25.0
+kubeVersion: ">=1.21.0-0"
 home: https://github.com/prometheus/blackbox_exporter
 sources:
   - https://github.com/prometheus/blackbox_exporter
