fix: nindent ksm pod annotations
Signed-off-by: Cameron McAvoy <cmcavoy@indeed.com>

--- a/charts/kube-state-metrics/templates/deployment.yaml
+++ b/charts/kube-state-metrics/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
         {{- end }}
       {{- if .Values.podAnnotations }}
       annotations:
-      {{ toYaml .Values.podAnnotations | indent 8 }}
+      {{ toYaml .Values.podAnnotations | nindent 8 }}
       {{- end }}
     spec:
       automountServiceAccountToken: {{ .Values.automountServiceAccountToken }}
