--- a/charts/prometheus-redis-exporter/values.yaml
+++ b/charts/prometheus-redis-exporter/values.yaml
@@ -50,6 +50,16 @@ tolerations: []
 
 affinity: {}
 
+## Extra manifests to deploy as an array
+extraManifests: []
+  # - apiVersion: v1
+  #   kind: ConfigMap
+  #   metadata:
+  #   labels:
+  #     name: redis-exporter-extra
+  #   data:
+  #     extra-data: "value"
+
 # If serviceMonitor.multipleTarget is enabled, this configuration is actually not used
 redisAddress: redis://myredis:6379
 
