--- a/charts/prometheus-postgres-exporter/ci/extramanifests-values.yaml
+++ b/charts/prometheus-postgres-exporter/ci/extramanifests-values.yaml
@@ -1,17 +1,13 @@
 extraManifests:
-- apiVersion: external-secrets.io/v1beta1
-  kind: SecretStore
+- apiVersion: v1
+  kind: ConfigMap
   metadata:
-    name: '{{ include "prometheus-postgres-exporter.fullname" . }}'
-  spec:
-    provider:
-      vault:
-        auth:
-          kubernetes:
-            mountPath: kubernetes
-            role: prometheus-postgres-exporter
-            serviceAccountRef:
-              name: '{{  include "prometheus-postgres-exporter.serviceAccountName" .  }}'
-        path: secret
-        server: https://vault.server
-        version: v2
+    name: '{{ include "prometheus-postgres-exporter.fullname" . }}-extra-cm1'
+  data:
+    extra-data: "value1"
+- apiVersion: v1
+  kind: Secret
+  metadata:
+    name: '{{ include "prometheus-postgres-exporter.fullname" . }}-extra-secret1'
+  stringData:
+    secret: "value"
