--- a/charts/prometheus-blackbox-exporter/templates/configmap.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/configmap.yaml
@@ -1,3 +1,4 @@
+{{- if (eq .Values.configExistingConfigMapName: "") }}
 {{- if and .Values.config (eq .Values.configExistingSecretName "") }}
 apiVersion: v1
 kind: {{ if .Values.secretConfig -}} Secret {{- else -}} ConfigMap {{- end }}
