[prometheus-node-exporter] Updated to add k8s service port config (#4415)
* Updated prometheus-node-exporter helm chart to allow you to change the Kubernetes service port seperately from the container port. fixes #4414

Signed-off-by: Adam Rahja <arahja@gmail.com>

* Update Chart.yaml

Signed-off-by: MH <zanhsieh@gmail.com>

Signed-off-by: MH <zanhsieh@gmail.com>

---------

Signed-off-by: Adam Rahja <arahja@gmail.com>
Signed-off-by: arahja <arahja@gmail.com>
Signed-off-by: MH <zanhsieh@gmail.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -89,6 +89,7 @@ service:
   type: ClusterIP
   clusterIP: ""
   port: 9100
+  servicePort: ""
   targetPort: 9100
   nodePort:
   portName: metrics
