--- a/charts/prometheus-node-exporter/templates/service.yaml
+++ b/charts/prometheus-node-exporter/templates/service.yaml
@@ -23,7 +23,7 @@ spec:
   clusterIP: "{{ .Values.service.clusterIP }}"
 {{- end }}
   ports:
-    - port: {{ .Values.service.port }}
+    - port: {{ .Values.service.servicePort | default .Values.service.port }}
       {{- if ( and (eq .Values.service.type "NodePort" ) (not (empty .Values.service.nodePort)) ) }}
       nodePort: {{ .Values.service.nodePort }}
       {{- end }}
