Propagate global.imageRegistry to operator-managed prometheus images
Signed-off-by: Omer Yahud <omer.yahud@run.ai>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2839,11 +2839,11 @@ prometheusOperator:
 
   ## Prometheus image to use for prometheuses managed by the operator
   ##
-  # prometheusDefaultBaseImage: prometheus/prometheus
+  prometheusDefaultBaseImage: prometheus/prometheus
 
   ## Prometheus image registry to use for prometheuses managed by the operator
   ##
-  # prometheusDefaultBaseImageRegistry: quay.io
+  prometheusDefaultBaseImageRegistry: quay.io
 
   ## Alertmanager image to use for alertmanagers managed by the operator
   ##
