[prometheus-node-exporter] Support hostIPC setting (#4772)
* support host ipc

Signed-off-by: dongjiang1989 <dongjiang1989@126.com>

* update version

Signed-off-by: dongjiang1989 <dongjiang1989@126.com>

---------

Signed-off-by: dongjiang1989 <dongjiang1989@126.com>
Co-authored-by: MH <zanhsieh@gmail.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -323,6 +323,9 @@ hostNetwork: true
 # Share the host process ID namespace
 hostPID: true
 
+# Share the host ipc namespace
+hostIPC: false
+
 # Mount the node's root file system (/) at /host/root in the container
 hostRootFsMount:
   enabled: true
