--- a/charts/prometheus-redis-exporter/values.yaml
+++ b/charts/prometheus-redis-exporter/values.yaml
@@ -50,6 +50,8 @@ tolerations: []
 
 affinity: {}
 
+priorityClassName: ""
+
 ## Extra manifests to deploy as an array
 extraManifests: []
   # - apiVersion: v1
