Replace podLabels with commonLabels in labels helper
podLabels are expected at pods only.

Signed-off-by: zeritti <47476160+zeritti@users.noreply.github.com>

--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -362,6 +362,9 @@ podAnnotations:
 # Extra labels to be added to node exporter pods
 podLabels: {}
 
+## Labels to attach to all resources
+commonLabels: {}
+
 # Annotations to be added to node exporter daemonset
 daemonsetAnnotations: {}
 
