--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -363,8 +363,11 @@ podAnnotations:
   # Fix for very slow GKE cluster upgrades
   cluster-autoscaler.kubernetes.io/safe-to-evict: "true"
 
-# Extra labels to be added to node exporter pods
+# Extra labels to add to node exporter pods (can be templated)
 podLabels: {}
+
+## Extra labels to attach to all resources (can be templated)
+commonLabels: {}
 
 # Annotations to be added to node exporter daemonset
 daemonsetAnnotations: {}
