Take into account image.pullSecret Fixes #4786
Signed-off-by: Hathoute <whitesmith.thedj@gmail.com>

--- a/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
+++ b/charts/prometheus-elasticsearch-exporter/templates/deployment.yaml
@@ -41,7 +41,7 @@ spec:
 {{- if .Values.priorityClassName }}
       priorityClassName: "{{ .Values.priorityClassName }}"
 {{- end }}
-      {{- if .Values.global.imagePullSecrets }}
+      {{- if or .Values.global.imagePullSecrets .Values.image.pullSecret }}
       imagePullSecrets:
       {{- include "elasticsearch-exporter.imagePullSecrets" . | indent 8 }}
       {{- end }}
