Set default grafana password to 'admin'
Signed-off-by: H.Hedhly <9963093+thehedhly@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -973,7 +973,7 @@ grafana:
   ##
   defaultDashboardsEditable: true
 
-  adminPassword: prom-operator
+  adminPassword: "admin"
 
   rbac:
     ## If true, Grafana PSPs will be created
