[prometheus-postgres-exporter] Allow override of container name
When using this chart as dependency, you may want to use alias.
This alias may use camelCase as this is a common convention in values.yaml. 
This will result in an error as expected name must conform to RFC 1123.

Signed-off-by: Norbert Szulc <norbert@icetek.io>

--- a/charts/prometheus-postgres-exporter/templates/deployment.yaml
+++ b/charts/prometheus-postgres-exporter/templates/deployment.yaml
@@ -50,7 +50,7 @@ spec:
       {{- end }}
       {{- end }}
       containers:
-        - name: {{ .Chart.Name }}
+        - name: {{ template "prometheus-postgres-exporter.name" . }}
           args:
           - "--config.file=/etc/postgres_exporter.yml"
           - "--web.listen-address=:{{ .Values.service.targetPort }}"
