--- a/charts/prometheus-node-exporter/values.yaml
+++ b/charts/prometheus-node-exporter/values.yaml
@@ -80,9 +80,9 @@ kubeRBACProxy:
     # limits:
     #  cpu: 100m
     #  memory: 64Mi
-  # requests:
-  #  cpu: 10m
-  #  memory: 32Mi
+    # requests:
+    #  cpu: 10m
+    #  memory: 32Mi
 
 ## Service configuration
 service:
@@ -93,13 +93,13 @@ service:
   type: ClusterIP
   ## IP address for type ClusterIP
   clusterIP: ""
-  ## Default service port. Sets the port of the exposed container as well (NE or kubeRBACproxy).
+  ## Default service port. Sets the port of the exposed container as well (NE or kubeRBACProxy).
   ## Use "servicePort" below if changing the service port only is desired.
   port: 9100
   ## Service port. Use this field if you wish to set a different service port
   ## without changing the container port ("port" above).
   servicePort: ""
-  ## Targeted port in the pod. Must refer to an open container port ("port" or "portName" above).
+  ## Targeted port in the pod. Must refer to an open container port ("port" or "portName").
   ## (IntOrString)
   targetPort: 9100
   ## Name of the service port. Sets the port name of the main container (NE) as well.
