feat: add the ability to set serviceAccount annotations for PrometheusOperator
Signed-off-by: Jesús Fernández <7312236+fernandezcuesta@users.noreply.github.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -2612,6 +2612,7 @@ prometheusOperator:
     create: true
     name: ""
     automountServiceAccountToken: true
+    annotations: {}
 
   ## Configuration for Prometheus operator service
   ##
