--- a/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/deployment/serviceaccount.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus-operator/admission-webhooks/deployment/serviceaccount.yaml
@@ -8,7 +8,7 @@ metadata:
   labels:
     app: {{ template "kube-prometheus-stack.name" . }}-operator
     {{- include "kube-prometheus-stack.prometheus-operator-webhook.labels" . | indent 4 }}
-  {{- with .Values.prometheusOperator.serviceAccount.annotations }}
+  {{- with .Values.prometheusOperator.admissionWebhooks.deployment.serviceAccount.annotations }}
   annotations: {{- toYaml . | nindent 4 }}
   {{- end }}
 {{- if .Values.global.imagePullSecrets }}
