[kube-prometheus-stack] Implement POC basing on @jkroepke's 2nd suggestion in #4818
https://github.com/prometheus-community/helm-charts/pull/4818#issuecomment-2315822515
Signed-off-by: Johannes Schnatterer <johannes.schnatterer@cloudogu.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -246,9 +246,8 @@ spec:
   ruleSelector: {}
 {{- end }}
 {{- end }}
-{{- if not (eq .Values.prometheus.prometheusSpec.scrapeConfigSelector nil)}}
-  scrapeConfigSelector:
-      {{- tpl (toYaml .Values.prometheus.prometheusSpec.scrapeConfigSelector | indent 4) . | nindent 2 }}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.scrapeConfigSelector) }}
+  scrapeConfigSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.scrapeConfigSelector) . | nindent 4 }}
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.storageSpec }}
   storage:
