--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -3683,14 +3683,11 @@ prometheus:
     #   matchLabels:
     #     prometheus: somelabel
 
-    ## If true, a nil or {} value for prometheus.prometheusSpec.scrapeConfigSelector will cause the
-    ## prometheus resource to be created with selectors based on values in the helm deployment,
-    ## which will also match the scrapeConfigs created
-    ##
-    scrapeConfigSelectorNilUsesHelmValues: true
-
     ## scrapeConfigs to be selected for target discovery.
-    ## If {}, select all scrapeConfigs
+    ## If matchLabels.release: "{{ $.Release.Name }}" the prometheus resource will be created
+    ## with selectors based on values in the helm deployment, which will also match the scrapeConfigs created
+    ## If matchLabels: null" select all scrapeConfigs
+    ## If null, exclude the field from the prometheusSpec (keeping  downward compatibility with older versions of CRD)
     ##
     scrapeConfigSelector:
       matchLabels:
