feat: allow configuring smartctl's powermode check
Requires: prometheus-community/smartctl_exporter#242

Signed-off-by: Robin Björklin <robin.bjorklin@gmail.com>

--- a/charts/prometheus-smartctl-exporter/templates/daemonset.yaml
+++ b/charts/prometheus-smartctl-exporter/templates/daemonset.yaml
@@ -40,6 +40,7 @@ spec:
         imagePullPolicy: {{ $global.Values.image.pullPolicy }}
         args:
         - '--smartctl.path={{ $config.smartctl_location }}'
+        - '--smartctl.powermode-check={{ $config.smartctl_powermode_check }}'
         - '--smartctl.interval={{ $config.collect_not_more_than_period }}'
 {{ range $config.devices }}
         - '--smartctl.device={{ . }}'
