--- a/charts/prometheus-smartctl-exporter/values.yaml
+++ b/charts/prometheus-smartctl-exporter/values.yaml
@@ -14,6 +14,7 @@ common:
     bind_to: "0.0.0.0:9633"
     url_path: "/metrics"
     smartctl_location: /usr/sbin/smartctl
+    smartctl_powermode_check: standby
     collect_not_more_than_period: 120s
 
 serviceMonitor:
